--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "webpack5",
   "version": "1.0.0",
-  "description": "",
+  "description": "![CI](https://github.com/EkaterinaDuzh/env/actions/workflows/web.yml/badge.svg)",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint . --fix",
+    "lint": "eslint .",
     "test": "jest",
     "coverage": "jest --coverage",
+    "doc": "jsdoc -c jsdoc.conf.json",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
+    "preshow:doc": "npm run doc",
+    "show:doc": "live-server doc",
     "preshow:dist": "npm run build",
-    "show:dist": "http-server dist"
+    "show:dist": "live-server dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EkaterinaDuzh/env.git"
   },
   "author": "coursar",
   "license": "MIT",
@@ -40,5 +47,9 @@
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.0",
     "webpack-merge": "6.0.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/EkaterinaDuzh/env/issues"
+  },
+  "homepage": "https://github.com/EkaterinaDuzh/env#readme"
 }
