--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "webpack5",
   "version": "1.0.0",
-  "description": "![CI](https://github.com/EkaterinaDuzh/env/actions/workflows/web.yml/badge.svg)",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "jest",
     "coverage": "jest --coverage",
-    "doc": "jsdoc -c jsdoc.conf.json",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
-    "preshow:doc": "npm run doc",
-    "show:doc": "live-server doc",
     "preshow:dist": "npm run build",
-    "show:dist": "live-server dist"
+    "show:dist": "live-server dist",
+    "show": "live-server",
+    "serve": "live-server ./src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EkaterinaDuzh/env.git"
+    "url": "git+https://github.com/EkaterinaDuzh/dom-2.git"
   },
-  "author": "coursar",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@babel/cli": "7.26.4",
     "@babel/core": "7.26.8",
@@ -49,7 +49,7 @@
     "webpack-merge": "6.0.1"
   },
   "bugs": {
-    "url": "https://github.com/EkaterinaDuzh/env/issues"
+    "url": "https://github.com/EkaterinaDuzh/dom-2/issues"
   },
-  "homepage": "https://github.com/EkaterinaDuzh/env#readme"
+  "homepage": "https://github.com/EkaterinaDuzh/dom-2#readme"
 }
